--- a/analyze_iris2.ipynb
+++ b/analyze_iris2.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# auto reload\n",
     "%load_ext autoreload\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1611,7 @@
        "149      2  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1700,7 @@
        "petal width (cm)           1.000000  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,16 +1711,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x162676090>"
+       "<seaborn.axisgrid.PairGrid at 0x19027844150>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1750,16 +1741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x162d37a90>"
+       "<seaborn.axisgrid.PairGrid at 0x190283e85d0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1803,6 +1794,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62f341c210e21365fa9a60aa896fd18ace01e7b5040bd043a9ded48940dba5ce"
+   }
   }
  },
  "nbformat": 4,
