--- a/analyze_iris.ipynb
+++ b/analyze_iris.ipynb
@@ -2497,6 +2497,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ロジスティック回帰，線形回帰（57page)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import LinearSVC"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
