--- a/submit/analyze_iris.ipynb
+++ b/submit/analyze_iris.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# auto reload\n",
     "%load_ext autoreload\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1584,7 @@
        "149      2  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1673,7 @@
        "petal width (cm)           1.000000  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,16 +1684,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1631f3810>"
+       "<seaborn.axisgrid.PairGrid at 0x1150df850>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1723,16 +1714,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x163231c90>"
+       "<seaborn.axisgrid.PairGrid at 0x115879390>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1749,6 +1740,70 @@
    ],
    "source": [
     "iris.pair_plot(diag_kind=\"kde\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== LogisticRegression ===\n",
+      "test score: 1.000, train score: 0.975\n",
+      "test score: 1.000, train score: 0.958\n",
+      "test score: 0.933, train score: 0.983\n",
+      "test score: 0.967, train score: 0.975\n",
+      "test score: 0.967, train score: 0.983\n",
+      "=== LinearSVC ===\n",
+      "test score: 1.000, train score: 0.975\n",
+      "test score: 0.967, train score: 0.958\n",
+      "test score: 0.933, train score: 0.967\n",
+      "test score: 0.967, train score: 0.975\n",
+      "test score: 0.967, train score: 0.975\n",
+      "=== SVC ===\n",
+      "test score: 1.000, train score: 0.975\n",
+      "test score: 1.000, train score: 0.967\n",
+      "test score: 0.933, train score: 0.967\n",
+      "test score: 0.933, train score: 0.975\n",
+      "test score: 0.967, train score: 0.967\n",
+      "=== DecisionTreeClassifier ===\n",
+      "test score: 1.000, train score: 1.000\n",
+      "test score: 0.967, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "=== KNeighborsClassifier ===\n",
+      "test score: 1.000, train score: 0.958\n",
+      "test score: 0.967, train score: 0.967\n",
+      "test score: 1.000, train score: 0.958\n",
+      "test score: 0.933, train score: 0.983\n",
+      "test score: 0.967, train score: 0.967\n",
+      "=== RandomForestClassifier ===\n",
+      "test score: 1.000, train score: 1.000\n",
+      "test score: 0.967, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.967, train score: 1.000\n",
+      "=== GradientBoostingClassifier ===\n",
+      "test score: 1.000, train score: 1.000\n",
+      "test score: 0.967, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.933, train score: 1.000\n",
+      "=== MLPClassifier ===\n",
+      "test score: 1.000, train score: 0.983\n",
+      "test score: 0.967, train score: 0.983\n",
+      "test score: 0.967, train score: 0.992\n",
+      "test score: 0.933, train score: 0.992\n",
+      "test score: 1.000, train score: 0.975\n"
+     ]
+    }
+   ],
+   "source": [
+    "iris.all_supervised(n_neighbors=4)"
    ]
   },
   {
