--- a/submit/analyze_iris.ipynb
+++ b/submit/analyze_iris.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# auto reload\n",
     "%load_ext autoreload\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1593,7 @@
        "149      2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1682,7 @@
        "petal width (cm)           1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,16 +1693,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1150df850>"
+       "<seaborn.axisgrid.PairGrid at 0x13afee990>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1714,16 +1723,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x115879390>"
+       "<seaborn.axisgrid.PairGrid at 0x13c992450>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1743,8 +1752,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 練習問題2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1802,7 @@
       "test score: 0.967, train score: 1.000\n",
       "test score: 0.933, train score: 1.000\n",
       "test score: 0.933, train score: 1.000\n",
-      "test score: 0.967, train score: 1.000\n",
+      "test score: 0.967, train score: 0.992\n",
       "=== GradientBoostingClassifier ===\n",
       "test score: 1.000, train score: 1.000\n",
       "test score: 0.967, train score: 1.000\n",
@@ -1794,9 +1810,9 @@
       "test score: 0.933, train score: 1.000\n",
       "test score: 0.933, train score: 1.000\n",
       "=== MLPClassifier ===\n",
-      "test score: 1.000, train score: 0.983\n",
+      "test score: 1.000, train score: 0.975\n",
       "test score: 0.967, train score: 0.983\n",
-      "test score: 0.967, train score: 0.992\n",
+      "test score: 0.967, train score: 0.983\n",
       "test score: 0.933, train score: 0.992\n",
       "test score: 1.000, train score: 0.975\n"
      ]
