--- a/submit/analyze_iris.ipynb
+++ b/submit/analyze_iris.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# auto reload\n",
     "%load_ext autoreload\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1584,7 @@
        "149      2  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1673,7 @@
        "petal width (cm)           1.000000  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,16 +1684,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x13afee990>"
+       "<seaborn.axisgrid.PairGrid at 0x1370b7250>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1723,16 +1714,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x13c992450>"
+       "<seaborn.axisgrid.PairGrid at 0x13c838990>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1760,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1768,58 +1759,395 @@
      "output_type": "stream",
      "text": [
       "=== LogisticRegression ===\n",
-      "test score: 1.000, train score: 0.975\n",
-      "test score: 1.000, train score: 0.958\n",
-      "test score: 0.933, train score: 0.983\n",
-      "test score: 0.967, train score: 0.975\n",
-      "test score: 0.967, train score: 0.983\n",
-      "=== LinearSVC ===\n",
-      "test score: 1.000, train score: 0.975\n",
-      "test score: 0.967, train score: 0.958\n",
-      "test score: 0.933, train score: 0.967\n",
-      "test score: 0.967, train score: 0.975\n",
-      "test score: 0.967, train score: 0.975\n",
-      "=== SVC ===\n",
-      "test score: 1.000, train score: 0.975\n",
       "test score: 1.000, train score: 0.967\n",
-      "test score: 0.933, train score: 0.967\n",
-      "test score: 0.933, train score: 0.975\n",
+      "test score: 0.833, train score: 0.975\n",
+      "test score: 1.000, train score: 0.967\n",
+      "test score: 1.000, train score: 0.975\n",
+      "test score: 0.933, train score: 0.983\n",
+      "=== LinearSVC ===\n",
+      "test score: 1.000, train score: 0.958\n",
+      "test score: 0.867, train score: 0.983\n",
+      "test score: 1.000, train score: 0.975\n",
       "test score: 0.967, train score: 0.967\n",
+      "test score: 0.933, train score: 0.975\n",
+      "=== SVC ===\n",
+      "test score: 1.000, train score: 0.958\n",
+      "test score: 0.800, train score: 0.983\n",
+      "test score: 1.000, train score: 0.967\n",
+      "test score: 0.967, train score: 0.967\n",
+      "test score: 0.933, train score: 0.983\n",
       "=== DecisionTreeClassifier ===\n",
       "test score: 1.000, train score: 1.000\n",
-      "test score: 0.967, train score: 1.000\n",
-      "test score: 0.933, train score: 1.000\n",
-      "test score: 0.933, train score: 1.000\n",
+      "test score: 0.900, train score: 1.000\n",
+      "test score: 1.000, train score: 1.000\n",
+      "test score: 0.900, train score: 1.000\n",
       "test score: 0.933, train score: 1.000\n",
       "=== KNeighborsClassifier ===\n",
+      "test score: 1.000, train score: 0.950\n",
+      "test score: 0.867, train score: 0.992\n",
       "test score: 1.000, train score: 0.958\n",
-      "test score: 0.967, train score: 0.967\n",
       "test score: 1.000, train score: 0.958\n",
-      "test score: 0.933, train score: 0.983\n",
-      "test score: 0.967, train score: 0.967\n",
+      "test score: 0.933, train score: 0.975\n",
+      "=== LinearRegression ===\n",
+      "test score: 0.906, train score: 0.934\n",
+      "test score: 0.842, train score: 0.944\n",
+      "test score: 0.946, train score: 0.926\n",
+      "test score: 0.962, train score: 0.919\n",
+      "test score: 0.934, train score: 0.929\n",
       "=== RandomForestClassifier ===\n",
+      "test score: 0.967, train score: 1.000\n",
+      "test score: 0.867, train score: 1.000\n",
       "test score: 1.000, train score: 1.000\n",
       "test score: 0.967, train score: 1.000\n",
       "test score: 0.933, train score: 1.000\n",
-      "test score: 0.933, train score: 1.000\n",
-      "test score: 0.967, train score: 0.992\n",
       "=== GradientBoostingClassifier ===\n",
       "test score: 1.000, train score: 1.000\n",
+      "test score: 0.900, train score: 1.000\n",
+      "test score: 1.000, train score: 1.000\n",
       "test score: 0.967, train score: 1.000\n",
       "test score: 0.933, train score: 1.000\n",
-      "test score: 0.933, train score: 1.000\n",
-      "test score: 0.933, train score: 1.000\n",
       "=== MLPClassifier ===\n",
-      "test score: 1.000, train score: 0.975\n",
-      "test score: 0.967, train score: 0.983\n",
-      "test score: 0.967, train score: 0.983\n",
-      "test score: 0.933, train score: 0.992\n",
-      "test score: 1.000, train score: 0.975\n"
+      "test score: 1.000, train score: 0.967\n",
+      "test score: 0.933, train score: 0.983\n",
+      "test score: 0.967, train score: 0.975\n",
+      "test score: 1.000, train score: 0.958\n",
+      "test score: 0.933, train score: 0.983\n"
      ]
     }
    ],
    "source": [
     "iris.all_supervised(n_neighbors=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <th>LinearSVC</th>\n",
+       "      <th>SVC</th>\n",
+       "      <th>DecisionTreeClassifier</th>\n",
+       "      <th>KNeighborsClassifier</th>\n",
+       "      <th>LinearRegression</th>\n",
+       "      <th>RandomForestClassifier</th>\n",
+       "      <th>GradientBoostingClassifier</th>\n",
+       "      <th>MLPClassifier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.905503</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.841859</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.945698</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.966667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.962310</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933661</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LogisticRegression  LinearSVC       SVC  DecisionTreeClassifier  \\\n",
+       "0            1.000000   1.000000  1.000000                1.000000   \n",
+       "1            0.833333   0.866667  0.800000                0.900000   \n",
+       "2            1.000000   1.000000  1.000000                1.000000   \n",
+       "3            1.000000   0.966667  0.966667                0.900000   \n",
+       "4            0.933333   0.933333  0.933333                0.933333   \n",
+       "\n",
+       "   KNeighborsClassifier  LinearRegression  RandomForestClassifier  \\\n",
+       "0              1.000000          0.905503                0.966667   \n",
+       "1              0.866667          0.841859                0.866667   \n",
+       "2              1.000000          0.945698                1.000000   \n",
+       "3              1.000000          0.962310                0.966667   \n",
+       "4              0.933333          0.933661                0.933333   \n",
+       "\n",
+       "   GradientBoostingClassifier  MLPClassifier  \n",
+       "0                    1.000000       1.000000  \n",
+       "1                    0.900000       0.933333  \n",
+       "2                    1.000000       0.966667  \n",
+       "3                    0.966667       1.000000  \n",
+       "4                    0.933333       0.933333  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.get_supervised()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <th>LinearSVC</th>\n",
+       "      <th>SVC</th>\n",
+       "      <th>DecisionTreeClassifier</th>\n",
+       "      <th>KNeighborsClassifier</th>\n",
+       "      <th>LinearRegression</th>\n",
+       "      <th>RandomForestClassifier</th>\n",
+       "      <th>GradientBoostingClassifier</th>\n",
+       "      <th>MLPClassifier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.953333</td>\n",
+       "      <td>0.953333</td>\n",
+       "      <td>0.940000</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.917806</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.966667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.073030</td>\n",
+       "      <td>0.055777</td>\n",
+       "      <td>0.082999</td>\n",
+       "      <td>0.050553</td>\n",
+       "      <td>0.059628</td>\n",
+       "      <td>0.047247</td>\n",
+       "      <td>0.050553</td>\n",
+       "      <td>0.043461</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.841859</td>\n",
+       "      <td>0.866667</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.905503</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.933661</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.966667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.945698</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.962310</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       LogisticRegression  LinearSVC       SVC  DecisionTreeClassifier  \\\n",
+       "count            5.000000   5.000000  5.000000                5.000000   \n",
+       "mean             0.953333   0.953333  0.940000                0.946667   \n",
+       "std              0.073030   0.055777  0.082999                0.050553   \n",
+       "min              0.833333   0.866667  0.800000                0.900000   \n",
+       "25%              0.933333   0.933333  0.933333                0.900000   \n",
+       "50%              1.000000   0.966667  0.966667                0.933333   \n",
+       "75%              1.000000   1.000000  1.000000                1.000000   \n",
+       "max              1.000000   1.000000  1.000000                1.000000   \n",
+       "\n",
+       "       KNeighborsClassifier  LinearRegression  RandomForestClassifier  \\\n",
+       "count              5.000000          5.000000                5.000000   \n",
+       "mean               0.960000          0.917806                0.946667   \n",
+       "std                0.059628          0.047247                0.050553   \n",
+       "min                0.866667          0.841859                0.866667   \n",
+       "25%                0.933333          0.905503                0.933333   \n",
+       "50%                1.000000          0.933661                0.966667   \n",
+       "75%                1.000000          0.945698                0.966667   \n",
+       "max                1.000000          0.962310                1.000000   \n",
+       "\n",
+       "       GradientBoostingClassifier  MLPClassifier  \n",
+       "count                    5.000000       5.000000  \n",
+       "mean                     0.960000       0.966667  \n",
+       "std                      0.043461       0.033333  \n",
+       "min                      0.900000       0.933333  \n",
+       "25%                      0.933333       0.933333  \n",
+       "50%                      0.966667       0.966667  \n",
+       "75%                      1.000000       1.000000  \n",
+       "max                      1.000000       1.000000  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.get_supervised().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BestMethod is  MLPClassifier  :  0.9667\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_method, best_score = iris.best_supervised()\n",
+    "print(\"BestMethod is \", best_method, \" : \", \"{0:0.4f}\".format(best_score))"
    ]
   },
   {
