--- a/sec02_supervised_learning.ipynb
+++ b/sec02_supervised_learning.ipynb
@@ -1528,7 +1528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.11 | packaged by Anaconda, Inc. | (main, Dec 11 2024, 16:34:19) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
