--- a/submit/analyze_iris.ipynb
+++ b/submit/analyze_iris.ipynb
@@ -2200,6 +2200,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 練習問題3\n",
+    "\n",
+    "- データ変換, スケーリング\n",
+    "- クラスタリング"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
