--- a/submit/analyze_iris.ipynb
+++ b/submit/analyze_iris.ipynb
@@ -1690,7 +1690,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x140d00150>"
+       "<seaborn.axisgrid.PairGrid at 0x1113b1bd0>"
       ]
      },
      "execution_count": 6,
@@ -1720,7 +1720,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x143170250>"
+       "<seaborn.axisgrid.PairGrid at 0x111f25390>"
       ]
      },
      "execution_count": 7,
@@ -2348,7 +2348,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x143c47390>"
+       "<graphviz.sources.Source at 0x112733e90>"
       ]
      },
      "execution_count": 13,
@@ -2764,7 +2764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
